welcome.lessons.welcome.summative.Moria.scala.code
retourne()
while (!estFaceMur) {
  if (!porteBiscuit()) {
    while (!estSurBiscuit) {
    avance()
    }
    prendBiscuit()
    retourne()
  else {
    while(!estSurBiscuit) {
      avance()
    }
    recule()
    poseBiscuit()
    
  }
  
}




def ChercheBiscuit() {
  while (!estSurBiscuit) {
    avance()
  }
  prendBiscuit()
  retourne()
  while(!estSurBiscuit) {
    avance()
  }
  recule()
  poseBiscuit()

	retourne()
}

